Fix autohide when two scrollbars

--- a/jquery.scrollable.css
+++ b/jquery.scrollable.css
@@ -86,7 +86,7 @@
     opacity : 0;
 }
 
-.scrollable.autohide > .scrollbar.scrolling,
+.scrollable.scrolling.autohide > .scrollbar,
 .scrollable.autohide.hover > .scrollbar {
     filter : alpha(opacity=100);
     opacity : 1;
